add payment month

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^4.0.3
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.2.3
+  intl: ^0.18.1
   flutter_launcher_icons:
 
   #Estado
@@ -47,3 +48,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/img/
+    - i18n/es.json
+    - i18n/en.json
