--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.app.expense_wallet">
    <application
-        android:label="expense_wallet"
+        android:label="ExpenseWallet"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
